--- a/myGPT (1).ipynb
+++ b/myGPT (1).ipynb
@@ -100,7 +100,7 @@
       "cell_type": "code",
       "source": [
         "repo_id =\"tiiuae/falcon-7b-instruct\"\n",
-        "huggingfacehub_api_token=\"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\"\n",
+        "huggingfacehub_api_token=\"**********************\"\n",
         "llm= HuggingFaceHub(huggingfacehub_api_token=huggingfacehub_api_token,\n",
         "                    repo_id=repo_id,\n",
         "                    model_kwargs={\"temperature\":0.7,\"max_new_tokens\":500})"
